# rust-training

./: Cargo.toml
.github/workflows/: test.yml
src/: mac.rs  main.rs  notmac.rs
