[package]
name = "rust-training"
version = "0.1.0"
authors = ["Sotaro Tommykawa <tommysouta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.10.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-text = "19.1.0"
